docs/pages/versions/v56.0.0/sdk/masked-view.mdx
---
modificationDate: May 18, 2026
title: '@react-native-masked-view/masked-view'
description: A library that provides a masked view.
sourceCodeUrl: 'https://github.com/react-native-masked-view/masked-view'
packageName: '@react-native-masked-view/masked-view'
platforms: ['android', 'ios', 'tvos', 'expo-go']
inExpoGo: true
---

import { BookOpen02Icon } from '@expo/styleguide-icons/outline/BookOpen02Icon';

import { APIInstallSection } from '~/components/plugins/InstallSection';
import { BoxLink } from '~/ui/components/BoxLink';

> **important** [`@expo/ui` provides a drop-in replacement](./ui/drop-in-replacements/maskedview) for `@react-native-masked-view/masked-view`, powered by Jetpack Compose on Android and SwiftUI on iOS.

`@react-native-masked-view/masked-view` provides a masked view that only displays the pixels that overlap with the view rendered in its mask element.

> **warning** You can only have one of either `@react-native-community/masked-view` (deprecated) or `@react-native-masked-view/masked-view` installed in your project at any given time. React Navigation v6 and later requires `@react-native-masked-view/masked-view`, so you should use that package instead if you are using the latest version of React Navigation.

> **important** Android support for this library is [experimental](/more/release-statuses/#experimental) and you may encounter inconsistencies in behavior across platforms. Report issues you encounter to [`react-native-masked-view` GitHub repository](https://github.com/react-native-masked-view/masked-view).

## Installation

<APIInstallSection href="https://github.com/react-native-masked-view/masked-view#getting-started" />

## Learn more

<BoxLink
  title="Visit official documentation"
  description="Get full information on API and its usage."
  Icon={BookOpen02Icon}
  href="https://github.com/react-native-masked-view/masked-view"
/>
